# Neo-AI

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  requirements.txt  uninstall.sh
config/: PrePromt.md  config.yaml.example
config/model_contexts/: claude.md  default.md  lm_studio.md  ollama.gemma.md  ollama.llama.md  ollama.md  ollama.mistral.md  ollama.qwen.md  openai.md  openai_reasoning.md  security-cloud.md  security-openai.md
config/runbooks/: cis-linux-assessment.md  docker-security.md  homeserver-runbook.md  incident-response.md  linux-forensics.md  linux-server-health.md  macbook.md  network-threat-hunting.md  threat-hunting-persistence.md  webserver-log-analysis.md
config/tones/: casual.md  minimal.md  professional.md  technical.md
src/: ai_core.py  anonymizer.py  approval_handler.py  command_executor.py  model_context_loader.py  runbook_runner.py  terminal_interface.py  terminal_ui.py  token_manager.py  utils.py
src/mcp_protocol/: core.py
src/mcp_protocol/handlers/: files_protocol.py  network_protocol.py  security_protocol.py  terminal_protocol.py
tests/: test_ai_core_history.py  test_anonymizer.py  test_files_protocol.py  test_mcp_multi_tag.py  test_token_manager.py  test_utils.py
